--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "type": "git",
     "url": "https://github.com/Amitabh95/react-captcha"
   },
+  "babel": {
+    "presets": [ "@babel/react" ]
+  },
   "name": "captcha-reactjs",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "dependencies": {
     "axios": "^0.19.0",
     "react-detect-offline": "^2.4.0",
